# serializer version: 1
# name: TestMDA.test_save_persistance[False]
  [[0.39 0.28 0.49]
   [0.38 0.28 0.50]
   [0.38 0.28 0.48]
   ...
   [1.31 0.34 0.58]
   [1.32 0.36 0.58]
   [1.32 0.36 0.57]]
# ---
# name: TestMDA.test_save_persistance[True]
  [[0.39 0.28 0.49]
   [0.38 0.28 0.50]
   [0.38 0.28 0.48]
   ...
   [1.31 0.34 0.58]
   [1.32 0.36 0.58]
   [1.32 0.36 0.57]]
# ---
# name: TestMDA.test_show_multiple_selection[False]
  AttributeError("The selected attribute 'posiiton' does not exist on the mesh.")
# ---
# name: TestMDA.test_show_multiple_selection[False].1
  []
# ---
# name: TestMDA.test_show_multiple_selection[True]
  AttributeError("The selected attribute 'posiiton' does not exist on the mesh.")
# ---
# name: TestMDA.test_show_universe[False]
  []
# ---
# name: TestMDA.test_show_universe[True]
  []
# ---
# name: TestMDA.test_show_updated_atoms[False]
  [[0.41 0.30 0.49]
   [0.42 0.30 0.49]
   [0.41 0.29 0.49]
   ...
   [0.44 0.33 0.51]
   [0.44 0.34 0.51]
   [0.45 0.34 0.51]]
# ---
# name: TestMDA.test_show_updated_atoms[False].1
  [[0.41 0.30 0.49]
   [0.42 0.29 0.50]
   [0.41 0.28 0.50]
   ...
   [0.44 0.33 0.51]
   [0.44 0.33 0.51]
   [0.45 0.34 0.51]]
# ---
# name: TestMDA.test_show_updated_atoms[True]
  [[0.41 0.30 0.49]
   [0.42 0.30 0.49]
   [0.41 0.29 0.49]
   ...
   [0.44 0.33 0.51]
   [0.44 0.34 0.51]
   [0.45 0.34 0.51]]
# ---
# name: TestMDA.test_show_updated_atoms[True].1
  [[0.41 0.30 0.49]
   [0.42 0.29 0.50]
   [0.41 0.28 0.50]
   ...
   [0.44 0.33 0.51]
   [0.44 0.33 0.51]
   [0.45 0.34 0.51]]
# ---
# name: TestMDA.test_trajectory_update[False]
  [[1.17 0.30 0.78]
   [0.68 0.38 0.42]
   [1.21 0.47 0.58]
   [0.84 0.23 0.74]
   [0.49 0.31 0.44]
   [0.40 0.30 0.46]
   [0.73 0.54 0.51]
   [1.33 0.31 0.58]
   [1.07 0.69 0.60]
   [0.94 0.38 0.36]
   [1.05 0.25 0.52]
   [0.48 0.22 0.46]
   [0.79 0.28 0.54]
   [1.27 0.54 0.59]
   [0.67 0.58 0.77]
   [1.07 0.48 0.44]
   [1.17 0.39 0.81]
   [1.10 0.43 0.77]
   [0.54 0.49 0.34]
   [0.76 0.50 0.74]
   [1.34 0.26 0.71]
   [1.32 0.37 0.69]
   [0.77 0.23 0.73]
   [0.88 0.38 0.56]
   [0.62 0.43 0.31]
   [1.18 0.58 0.40]
   [0.84 0.16 0.49]
   [0.53 0.47 0.32]
   [0.96 0.32 0.36]
   [0.98 0.48 0.49]
   [0.94 0.39 0.66]
   [1.06 0.55 0.53]
   [0.55 0.47 0.39]
   [0.71 0.53 0.75]
   [0.95 0.20 0.57]
   [0.53 0.43 0.28]
   [0.64 0.34 0.49]
   [1.40 0.30 0.61]
   [0.63 0.53 0.68]
   [1.00 0.27 0.34]
   [1.25 0.54 0.62]
   [0.73 0.57 0.75]
   [1.19 0.41 0.66]
   [1.15 0.24 0.66]
   [1.09 0.54 0.75]
   [0.39 0.18 0.41]
   [0.98 0.30 0.39]
   [0.83 0.39 0.70]
   [0.63 0.47 0.57]
   [1.06 0.54 0.40]
   [0.75 0.19 0.53]
   [1.05 0.28 0.38]
   [1.39 0.32 0.59]
   [0.69 0.54 0.38]
   [0.58 0.40 0.35]
   [1.15 0.57 0.78]
   [1.31 0.44 0.73]
   [0.64 0.59 0.70]
   [0.70 0.50 0.35]
   [0.85 0.37 0.60]
   [0.72 0.24 0.71]
   [0.92 0.25 0.53]
   [0.66 0.54 0.71]
   [1.01 0.37 0.44]
   [1.19 0.51 0.67]
   [0.82 0.41 0.76]
   [0.63 0.51 0.53]
   [0.56 0.41 0.47]
   [0.79 0.46 0.65]
   [1.29 0.45 0.61]
   [0.59 0.27 0.55]
   [0.79 0.55 0.69]
   [0.64 0.56 0.64]
   [0.55 0.18 0.47]
   [0.90 0.23 0.39]
   [1.37 0.35 0.71]
   [1.13 0.47 0.59]
   [1.08 0.45 0.54]
   [0.83 0.27 0.50]
   [0.94 0.47 0.42]
   [0.97 0.44 0.40]
   [1.29 0.46 0.75]
   [1.12 0.42 0.37]
   [0.95 0.21 0.63]
   [0.59 0.58 0.39]
   [1.26 0.53 0.59]
   [0.58 0.30 0.35]
   [0.84 0.53 0.67]
   [1.14 0.50 0.35]
   [0.43 0.35 0.48]
   [1.03 0.48 0.31]
   [0.54 0.50 0.29]
   [1.02 0.57 0.51]
   [0.84 0.32 0.67]
   [0.59 0.43 0.35]
   [0.69 0.44 0.58]
   [1.04 0.59 0.54]
   [1.11 0.52 0.54]
   [1.03 0.38 0.43]
   [0.63 0.42 0.44]]
# ---
# name: TestMDA.test_trajectory_update[False].1
  [[1.17 0.31 0.78]
   [0.67 0.38 0.40]
   [1.20 0.47 0.59]
   [0.84 0.23 0.72]
   [0.48 0.31 0.45]
   [0.39 0.29 0.47]
   [0.73 0.55 0.50]
   [1.33 0.31 0.58]
   [1.07 0.67 0.58]
   [0.93 0.41 0.35]
   [1.04 0.25 0.51]
   [0.46 0.21 0.47]
   [0.78 0.29 0.53]
   [1.27 0.54 0.59]
   [0.68 0.56 0.77]
   [1.06 0.48 0.44]
   [1.15 0.40 0.84]
   [1.10 0.43 0.78]
   [0.52 0.49 0.34]
   [0.75 0.49 0.73]
   [1.35 0.26 0.71]
   [1.32 0.37 0.68]
   [0.77 0.23 0.72]
   [0.87 0.38 0.55]
   [0.61 0.43 0.31]
   [1.18 0.58 0.41]
   [0.83 0.17 0.47]
   [0.52 0.47 0.32]
   [0.94 0.33 0.35]
   [0.98 0.48 0.50]
   [0.94 0.39 0.64]
   [1.06 0.55 0.54]
   [0.54 0.47 0.38]
   [0.72 0.52 0.75]
   [0.95 0.19 0.55]
   [0.47 0.44 0.27]
   [0.62 0.34 0.48]
   [1.39 0.30 0.61]
   [0.63 0.53 0.68]
   [0.99 0.29 0.32]
   [1.25 0.54 0.63]
   [0.73 0.57 0.75]
   [1.18 0.40 0.66]
   [1.16 0.23 0.66]
   [1.09 0.54 0.76]
   [0.37 0.17 0.43]
   [0.97 0.31 0.37]
   [0.83 0.39 0.69]
   [0.64 0.47 0.57]
   [1.06 0.55 0.39]
   [0.71 0.22 0.49]
   [1.04 0.29 0.36]
   [1.39 0.32 0.60]
   [0.68 0.53 0.38]
   [0.56 0.40 0.33]
   [1.14 0.57 0.78]
   [1.31 0.44 0.73]
   [0.64 0.59 0.72]
   [0.70 0.49 0.35]
   [0.84 0.37 0.58]
   [0.72 0.23 0.70]
   [0.92 0.24 0.52]
   [0.66 0.53 0.72]
   [1.00 0.37 0.42]
   [1.19 0.50 0.66]
   [0.83 0.40 0.74]
   [0.62 0.51 0.53]
   [0.55 0.41 0.46]
   [0.79 0.46 0.64]
   [1.29 0.45 0.61]
   [0.59 0.27 0.54]
   [0.79 0.54 0.69]
   [0.65 0.55 0.64]
   [0.54 0.19 0.46]
   [0.90 0.23 0.37]
   [1.37 0.35 0.71]
   [1.13 0.47 0.60]
   [1.08 0.45 0.55]
   [0.83 0.27 0.48]
   [0.93 0.47 0.43]
   [0.97 0.45 0.40]
   [1.29 0.45 0.76]
   [1.11 0.43 0.36]
   [0.94 0.20 0.61]
   [0.58 0.58 0.39]
   [1.26 0.52 0.60]
   [0.55 0.29 0.35]
   [0.83 0.53 0.68]
   [1.13 0.51 0.35]
   [0.42 0.34 0.49]
   [1.02 0.49 0.31]
   [0.52 0.50 0.29]
   [1.02 0.57 0.52]
   [0.84 0.32 0.65]
   [0.57 0.43 0.35]
   [0.69 0.43 0.58]
   [1.04 0.60 0.54]
   [1.10 0.52 0.55]
   [1.02 0.38 0.43]
   [0.62 0.41 0.43]]
# ---
# name: TestMDA.test_trajectory_update[True]
  [[0.51 0.50 0.32]
   [1.19 0.26 0.76]
   [0.88 0.25 0.51]
   [0.59 0.27 0.45]
   [0.41 0.30 0.49]
   [0.68 0.51 0.60]
   [1.35 0.36 0.68]
   [1.02 0.57 0.50]
   [0.97 0.41 0.41]
   [0.42 0.23 0.44]
   [1.01 0.25 0.48]
   [1.20 0.24 0.62]
   [0.69 0.37 0.77]
   [1.28 0.51 0.60]
   [0.69 0.45 0.41]
   [0.76 0.40 0.77]
   [0.96 0.26 0.49]
   [0.55 0.48 0.44]
   [1.13 0.58 0.70]
   [1.02 0.45 0.35]
   [0.66 0.47 0.47]
   [1.12 0.56 0.45]
   [1.20 0.51 0.63]
   [0.87 0.17 0.57]
   [1.31 0.46 0.74]
   [0.69 0.46 0.44]
   [0.70 0.39 0.79]
   [0.93 0.35 0.40]
   [0.76 0.46 0.41]
   [0.57 0.31 0.33]
   [0.74 0.34 0.68]
   [1.15 0.56 0.41]
   [1.18 0.26 0.71]
   [0.75 0.42 0.79]
   [1.01 0.43 0.50]
   [0.52 0.39 0.49]
   [0.44 0.33 0.44]
   [1.11 0.56 0.41]
   [0.95 0.20 0.61]
   [1.07 0.50 0.69]
   [1.00 0.34 0.38]
   [1.18 0.50 0.42]
   [0.66 0.50 0.51]
   [0.60 0.49 0.46]
   [1.39 0.32 0.62]
   [0.68 0.35 0.74]
   [0.61 0.53 0.53]
   [1.00 0.25 0.53]
   [0.87 0.31 0.30]
   [0.71 0.37 0.80]
   [1.10 0.54 0.52]
   [1.21 0.22 0.71]
   [0.79 0.28 0.73]
   [0.62 0.64 0.58]
   [0.88 0.36 0.67]
   [0.58 0.24 0.50]
   [0.84 0.43 0.71]
   [0.64 0.53 0.72]
   [0.50 0.20 0.47]
   [1.07 0.44 0.37]
   [0.96 0.30 0.33]
   [1.01 0.55 0.57]
   [1.07 0.57 0.55]
   [1.22 0.63 0.55]
   [0.89 0.35 0.44]
   [0.81 0.56 0.49]
   [1.22 0.27 0.64]
   [0.42 0.34 0.34]
   [0.88 0.47 0.69]
   [1.17 0.52 0.72]
   [1.04 0.65 0.59]
   [0.72 0.48 0.44]
   [1.27 0.44 0.68]
   [0.95 0.20 0.62]
   [0.59 0.52 0.43]
   [1.32 0.41 0.74]
   [1.27 0.44 0.78]
   [1.13 0.54 0.51]
   [0.58 0.46 0.37]
   [1.09 0.46 0.56]
   [1.12 0.55 0.75]
   [1.35 0.37 0.66]
   [1.00 0.29 0.35]
   [1.16 0.53 0.63]
   [0.54 0.50 0.46]
   [0.77 0.40 0.75]
   [0.96 0.28 0.48]
   [1.20 0.41 0.76]
   [1.19 0.25 0.66]
   [0.67 0.44 0.67]
   [0.48 0.23 0.48]
   [0.41 0.24 0.44]
   [0.73 0.56 0.49]
   [0.84 0.15 0.60]
   [1.13 0.54 0.40]
   [0.85 0.43 0.76]
   [0.78 0.22 0.56]
   [0.47 0.35 0.51]
   [1.20 0.40 0.75]
   [1.13 0.42 0.36]]
# ---
# name: TestMDA.test_trajectory_update[True].1
  [[-8.00e-03 -1.39e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [-1.50e-02  5.47e-03  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 2.78e-03 -1.58e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-1.39e-02  8.00e-03  0.00e+00]
   [-1.60e-02 -1.40e-09  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [-1.50e-02  5.47e-03  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [ 2.78e-03 -1.58e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 2.78e-03 -1.58e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-1.50e-02  5.47e-03  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 2.78e-03 -1.58e-02  0.00e+00]
   [-1.50e-02  5.47e-03  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [-1.50e-02  5.47e-03  0.00e+00]
   [-1.50e-02  5.47e-03  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [ 2.78e-03 -1.58e-02  0.00e+00]
   [-1.60e-02 -1.40e-09  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [ 1.23e-02  1.03e-02  0.00e+00]
   [-1.50e-02 -5.47e-03  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [ 2.78e-03  1.58e-02  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [ 1.60e-02  0.00e+00  0.00e+00]
   [-8.00e-03 -1.39e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [-8.00e-03  1.39e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]
   [ 1.23e-02 -1.03e-02  0.00e+00]]
# ---
# name: test_martini[pent/TOPOL2.pdb]
  [0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02]
# ---
# name: test_martini[pent/TOPOL2.pdb].1
  [10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81]
# ---
# name: test_martini[pent/TOPOL2.pdb].10
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].11
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].12
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].13
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].14
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].16
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].17
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].18
  [0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02]
# ---
# name: test_martini[pent/TOPOL2.pdb].19
  [10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81 10.81
   10.81 10.81 10.81 10.81]
# ---
# name: test_martini[pent/TOPOL2.pdb].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/TOPOL2.pdb].20
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/TOPOL2.pdb].21
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/TOPOL2.pdb].22
  [254 477 424 359   5 356 333 449 456 214   3 514 337 316 465 474 387 287
   462 327 420  84 376 342 277 316  90 382 328 182 419 445 364 325 493 294
   235 129 277 335 262 469 310 296 104 343  95 338 347  77 485 387 319 514
   464  47 284 451 308 123 246  56 167  58 327 463 490 359  75 163 174 513
   524 213 403 159 404  52 266 336  99 109 516 214 255 437 340 301 268 306
   279 465 150 502  85 181 213 461 142 323]
# ---
# name: test_martini[pent/TOPOL2.pdb].23
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/TOPOL2.pdb].24
  [1 2 1 1 1 1 2 2 2 1 2 2 1 2 2 2 1 1 1 1 2 2 1 2 2 1 2 1 1 2 1 1 1 2 2 1 2
   2 1 2 1 2 2 2 1 1 2 2 1 1 1 2 1 2 2 1 1 1 2 1 1 1 1 2 2 2 2 2 2 2 1 2 1 1
   2 2 1 2 1 1 2 2 2 1 2 2 2 2 2 1 1 1 2 2 1 1 1 2 1 1]
# ---
# name: test_martini[pent/TOPOL2.pdb].25
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/TOPOL2.pdb].26
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/TOPOL2.pdb].27
  [[1.28 1.44 1.50]
   [0.67 1.30 0.77]
   [0.94 0.76 1.32]
   [1.54 0.97 1.77]
   [1.59 1.26 0.98]
   [0.73 1.70 1.14]
   [0.56 1.23 1.13]
   [1.58 1.45 1.41]
   [1.64 0.73 1.33]
   [1.57 1.13 1.16]
   [1.66 0.94 1.10]
   [0.63 1.16 0.66]
   [0.39 1.14 1.00]
   [1.10 1.82 1.34]
   [1.18 0.54 1.11]
   [1.02 0.57 0.99]
   [1.22 1.56 1.65]
   [0.61 1.10 1.04]
   [1.01 0.89 1.15]
   [1.28 1.62 1.66]
   [1.02 1.90 1.12]
   [1.73 1.41 1.31]
   [1.30 1.58 1.63]
   [1.46 1.56 1.75]
   [1.14 1.81 1.20]
   [1.08 0.60 1.36]
   [0.86 1.20 0.70]
   [1.17 1.65 1.67]
   [0.58 1.11 1.19]
   [1.68 0.73 1.17]
   [1.28 1.48 1.45]
   [1.51 0.96 1.45]
   [0.44 1.07 1.12]
   [1.64 1.60 1.67]
   [0.53 1.12 0.78]
   [0.45 1.01 1.04]
   [1.09 0.64 1.11]
   [0.99 0.70 0.80]
   [1.54 1.04 1.54]
   [1.37 1.50 1.67]
   [1.13 0.80 1.40]
   [1.01 1.81 0.93]
   [1.30 0.71 1.45]
   [1.47 1.44 1.79]
   [1.11 1.49 0.85]
   [1.38 1.66 1.68]
   [1.14 0.76 0.96]
   [0.78 0.69 1.39]
   [0.57 1.03 1.20]
   [0.94 1.28 1.08]
   [1.06 0.96 1.33]
   [1.57 0.62 1.61]
   [0.61 1.06 1.02]
   [1.72 1.67 1.38]
   [0.68 1.02 0.81]
   [1.37 0.73 0.95]
   [0.96 1.73 1.16]
   [0.88 1.05 0.93]
   [0.81 0.80 1.17]
   [1.34 1.26 1.24]
   [0.65 1.16 1.08]
   [1.02 1.20 0.85]
   [1.62 1.19 1.26]
   [1.68 1.49 1.14]
   [1.47 0.66 1.66]
   [1.55 1.73 1.36]
   [1.70 1.75 1.47]
   [0.71 0.69 1.21]
   [1.24 2.00 0.93]
   [1.64 0.78 1.12]
   [1.00 1.54 0.92]
   [0.63 1.18 0.65]
   [1.14 0.97 1.49]
   [1.09 1.07 0.83]
   [1.20 1.90 1.33]
   [1.27 1.78 0.81]
   [1.27 1.70 1.44]
   [0.99 1.21 0.75]
   [1.08 0.69 1.34]
   [1.49 1.75 1.70]
   [0.89 1.24 0.86]
   [0.85 1.26 0.61]
   [1.72 1.70 1.42]
   [1.47 1.49 1.10]
   [0.95 0.48 1.04]
   [1.04 1.84 1.14]
   [0.50 1.24 1.13]
   [1.33 0.73 1.54]
   [1.08 1.84 1.20]
   [1.47 1.75 1.52]
   [0.67 1.03 1.03]
   [0.96 0.93 1.12]
   [0.77 1.30 0.52]
   [0.72 1.14 0.78]
   [1.01 1.03 0.95]
   [1.50 1.23 1.28]
   [1.57 1.14 1.15]
   [1.10 0.53 1.05]
   [0.94 1.27 0.99]
   [1.02 0.68 1.35]]
# ---
# name: test_martini[pent/TOPOL2.pdb].28
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].29
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].3
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/TOPOL2.pdb].30
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].31
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].32
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].33
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].34
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/TOPOL2.pdb].35
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/TOPOL2.pdb].4
  [254 477 424 359   5 356 333 449 456 214   3 514 337 316 465 474 387 287
   462 327 420  84 376 342 277 316  90 382 328 182 419 445 364 325 493 294
   235 129 277 335 262 469 310 296 104 343  95 338 347  77 485 387 319 514
   464  47 284 451 308 123 246  56 167  58 327 463 490 359  75 163 174 513
   524 213 403 159 404  52 266 336  99 109 516 214 255 437 340 301 268 306
   279 465 150 502  85 181 213 461 142 323]
# ---
# name: test_martini[pent/TOPOL2.pdb].5
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/TOPOL2.pdb].6
  [1 2 1 1 1 1 2 2 2 1 2 2 1 2 2 2 1 1 1 1 2 2 1 2 2 1 2 1 1 2 1 1 1 2 2 1 2
   2 1 2 1 2 2 2 1 1 2 2 1 1 1 2 1 2 2 1 1 1 2 1 1 1 1 2 2 2 2 2 2 2 1 2 1 1
   2 2 1 2 1 1 2 2 2 1 2 2 2 2 2 1 1 1 2 2 1 1 1 2 1 1]
# ---
# name: test_martini[pent/TOPOL2.pdb].7
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/TOPOL2.pdb].8
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/TOPOL2.pdb].9
  [[1.28 1.44 1.50]
   [0.67 1.30 0.77]
   [0.94 0.76 1.32]
   [1.54 0.97 1.77]
   [1.59 1.26 0.98]
   [0.73 1.70 1.14]
   [0.56 1.23 1.13]
   [1.58 1.45 1.41]
   [1.64 0.73 1.33]
   [1.57 1.13 1.16]
   [1.66 0.94 1.10]
   [0.63 1.16 0.66]
   [0.39 1.14 1.00]
   [1.10 1.82 1.34]
   [1.18 0.54 1.11]
   [1.02 0.57 0.99]
   [1.22 1.56 1.65]
   [0.61 1.10 1.04]
   [1.01 0.89 1.15]
   [1.28 1.62 1.66]
   [1.02 1.90 1.12]
   [1.73 1.41 1.31]
   [1.30 1.58 1.63]
   [1.46 1.56 1.75]
   [1.14 1.81 1.20]
   [1.08 0.60 1.36]
   [0.86 1.20 0.70]
   [1.17 1.65 1.67]
   [0.58 1.11 1.19]
   [1.68 0.73 1.17]
   [1.28 1.48 1.45]
   [1.51 0.96 1.45]
   [0.44 1.07 1.12]
   [1.64 1.60 1.67]
   [0.53 1.12 0.78]
   [0.45 1.01 1.04]
   [1.09 0.64 1.11]
   [0.99 0.70 0.80]
   [1.54 1.04 1.54]
   [1.37 1.50 1.67]
   [1.13 0.80 1.40]
   [1.01 1.81 0.93]
   [1.30 0.71 1.45]
   [1.47 1.44 1.79]
   [1.11 1.49 0.85]
   [1.38 1.66 1.68]
   [1.14 0.76 0.96]
   [0.78 0.69 1.39]
   [0.57 1.03 1.20]
   [0.94 1.28 1.08]
   [1.06 0.96 1.33]
   [1.57 0.62 1.61]
   [0.61 1.06 1.02]
   [1.72 1.67 1.38]
   [0.68 1.02 0.81]
   [1.37 0.73 0.95]
   [0.96 1.73 1.16]
   [0.88 1.05 0.93]
   [0.81 0.80 1.17]
   [1.34 1.26 1.24]
   [0.65 1.16 1.08]
   [1.02 1.20 0.85]
   [1.62 1.19 1.26]
   [1.68 1.49 1.14]
   [1.47 0.66 1.66]
   [1.55 1.73 1.36]
   [1.70 1.75 1.47]
   [0.71 0.69 1.21]
   [1.24 2.00 0.93]
   [1.64 0.78 1.12]
   [1.00 1.54 0.92]
   [0.63 1.18 0.65]
   [1.14 0.97 1.49]
   [1.09 1.07 0.83]
   [1.20 1.90 1.33]
   [1.27 1.78 0.81]
   [1.27 1.70 1.44]
   [0.99 1.21 0.75]
   [1.08 0.69 1.34]
   [1.49 1.75 1.70]
   [0.89 1.24 0.86]
   [0.85 1.26 0.61]
   [1.72 1.70 1.42]
   [1.47 1.49 1.10]
   [0.95 0.48 1.04]
   [1.04 1.84 1.14]
   [0.50 1.24 1.13]
   [1.33 0.73 1.54]
   [1.08 1.84 1.20]
   [1.47 1.75 1.52]
   [0.67 1.03 1.03]
   [0.96 0.93 1.12]
   [0.77 1.30 0.52]
   [0.72 1.14 0.78]
   [1.01 1.03 0.95]
   [1.50 1.23 1.28]
   [1.57 1.14 1.15]
   [1.10 0.53 1.05]
   [0.94 1.27 0.99]
   [1.02 0.68 1.35]]
# ---
# name: test_martini[pent/prot_ion.tpr]
  [0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02]
# ---
# name: test_martini[pent/prot_ion.tpr].1
  [72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72.]
# ---
# name: test_martini[pent/prot_ion.tpr].10
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].11
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].12
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].13
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].14
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].15
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].16
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].17
  [[ 46133  46142]
   [251501 251502]
   [131500 131501]
   [ 10045  10046]
   [  4257   4266]
   [ 66951  66952]
   [236003 236004]
   [191325 191326]
   [163504 163505]
   [  6622   6631]
   [145026 145035]
   [255493 255494]
   [ 93466  93467]
   [205589 205590]
   [278793 278794]
   [279785 279786]
   [ 41654  41655]
   [ 88095  88096]
   [135589 135590]
   [ 35257  35258]
   [216801 216802]
   [195653 195662]
   [ 40526  40518]
   [179769 179770]
   [201330 201331]
   [119824 119825]
   [230304 230313]
   [ 41203  41204]
   [ 92475  92476]
   [148092 148101]
   [ 45157  45158]
   [ 19336  19337]
   [ 96367  96368]
   [177923 177924]
   [253250 253242]
   [ 88869  88870]
   [285649 285658]
   [267907 267916]
   [  1236   1237]
   [178968 178969]
   [139823 139832]
   [222033 222034]
   [147711 147712]
   [174777 174778]
   [ 71454  71463]
   [ 36912  36913]
   [263127 263136]
   [265118 265119]
   [ 94534  94535]
   [ 73973  73982]
   [138067 138068]
   [156054 156055]
   [ 91491  91492]
   [198294 198295]
   [250148 250149]
   [130681 130690]
   [ 59116  59117]
   [105816 105817]
   [261844 261845]
   [  3919   3928]
   [ 95633  95642]
   [110584 110593]
   [ 18158  18167]
   [199018 199027]
   [149598 149599]
   [192868 192869]
   [195775 195776]
   [267331 267332]
   [215633 215642]
   [157451 157460]
   [ 82742  82751]
   [255405 255406]
   [ 27870  27871]
   [ 92131  92140]
   [214902 214903]
   [211091 211100]
   [ 43511  43512]
   [250066 250075]
   [114397 114398]
   [ 36251  36243]
   [238791 238800]
   [249006 249015]
   [198516 198517]
   [ 36016  36025]
   [276299 276308]
   [218606 218607]
   [236711 236712]
   [146806 146807]
   [200406 200407]
   [ 32973  32974]
   [ 87215  87216]
   [135902 135903]
   [231170 231179]
   [254258 254250]
   [110189 110198]
   [  3579   3588]
   [  6460   6469]
   [278413 278414]
   [ 79798  79807]
   [120506 120507]]
# ---
# name: test_martini[pent/prot_ion.tpr].18
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].19
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].2
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/prot_ion.tpr].20
  [0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02 0.02
   0.02 0.02]
# ---
# name: test_martini[pent/prot_ion.tpr].21
  [72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72. 72.
   72. 72. 72. 72. 72. 72. 72. 72. 72. 72.]
# ---
# name: test_martini[pent/prot_ion.tpr].22
  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.
   0. 0. 0. 0.]
# ---
# name: test_martini[pent/prot_ion.tpr].23
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/prot_ion.tpr].24
  [ 784 4717 2544  359    5 1416 4573 3629 3106  214 2653 4754 1927 4026
   5235 5244  917 1877 2582  857 4130 3264  906 3522 3987 2436 4330  912
   1918 2832  949  445 1954 3505 4733 1884 5005 4899  277 3515 2382 4179
   2960 3476 1164  873 4865 5108 1937 1137 2605 3037 1909 3694 4704 2167
   1344 2041 5078  123 1836 1646  167 3238 2977 3643 3670 5129 3785 2813
   1234 4753  524 1803 4113 3869  934 4292 2386  866 4339 4349 3696  744
   5025 4147 4580 2951 3978  836 1869 2585 4390 4742 1675  181  213 5231
   1202 2443]
# ---
# name: test_martini[pent/prot_ion.tpr].25
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/prot_ion.tpr].26
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/prot_ion.tpr].27
  [ 7  5  7  7 10 10  8 10  4  9 10 10 10  9  7  7 10  6  8  7  7  8  7  7
   10  9  9  5  7  7  7  5  9 10 10  8 10  9 10  9 10  8 10  9  7  7  6 10
   10  7  9 10  7 10  5 10 10  9  9  7  9  7 10  8  7  9 10  7  9  9 10 10
   10  7 10  7 10 10 10 10  7  7 10 10  7 10 10  7 10 10  7  7  5  7  9  7
    8  7  5 10]
# ---
# name: test_martini[pent/prot_ion.tpr].28
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/prot_ion.tpr].29
  [[1.64 0.72 1.51]
   [1.17 0.80 1.26]
   [0.91 1.63 1.33]
   [1.54 0.97 1.77]
   [1.59 1.26 0.98]
   [1.31 1.79 1.52]
   [0.90 0.53 1.31]
   [0.80 1.09 0.93]
   [1.16 1.84 1.05]
   [1.57 1.13 1.16]
   [1.14 1.62 0.77]
   [1.12 0.99 1.25]
   [1.34 1.50 1.72]
   [0.57 1.35 0.97]
   [1.18 0.54 1.11]
   [1.02 0.57 0.99]
   [1.55 0.61 1.64]
   [1.50 1.53 1.59]
   [1.11 1.54 1.23]
   [1.47 0.64 1.64]
   [0.58 1.20 0.82]
   [1.00 1.04 0.96]
   [1.48 0.68 1.65]
   [0.47 1.12 1.12]
   [0.66 1.35 0.89]
   [0.78 1.69 1.16]
   [1.20 0.89 1.06]
   [1.49 0.54 1.67]
   [1.56 1.62 1.70]
   [1.27 1.81 0.95]
   [1.62 0.72 1.45]
   [1.51 0.96 1.45]
   [1.48 1.51 1.80]
   [0.64 1.08 1.19]
   [0.98 0.90 1.28]
   [1.44 1.43 1.77]
   [1.09 0.64 1.11]
   [0.99 0.70 0.80]
   [1.54 1.04 1.54]
   [0.46 1.12 0.99]
   [0.84 1.49 1.21]
   [0.66 1.06 0.73]
   [1.15 1.78 1.39]
   [0.42 1.02 1.06]
   [1.47 1.52 1.09]
   [1.39 0.71 1.70]
   [1.14 0.76 0.96]
   [0.78 0.69 1.39]
   [1.62 1.56 1.74]
   [1.15 1.46 1.22]
   [1.00 1.43 1.27]
   [0.95 1.97 1.24]
   [1.52 1.47 1.59]
   [0.93 1.16 1.16]
   [0.97 0.90 1.12]
   [1.11 1.57 0.80]
   [1.44 1.61 1.50]
   [1.63 1.45 1.33]
   [0.81 0.80 1.17]
   [1.34 1.26 1.24]
   [1.53 1.59 1.60]
   [1.64 1.49 1.13]
   [1.62 1.19 1.26]
   [1.08 1.20 0.89]
   [0.95 1.92 1.33]
   [0.84 1.31 1.08]
   [0.85 1.22 1.23]
   [0.71 0.69 1.21]
   [0.64 1.36 0.58]
   [1.32 1.74 0.94]
   [1.44 1.57 1.19]
   [1.13 0.96 1.25]
   [1.14 0.97 1.49]
   [1.68 1.35 1.14]
   [0.59 1.44 0.91]
   [0.86 1.25 0.57]
   [1.38 0.65 1.43]
   [1.26 0.84 0.93]
   [0.86 1.61 1.17]
   [1.28 0.82 1.67]
   [1.20 0.75 1.00]
   [1.27 0.99 1.09]
   [0.90 1.21 1.18]
   [1.58 0.88 1.11]
   [0.95 0.48 1.04]
   [0.63 1.23 0.85]
   [0.85 0.55 1.33]
   [1.04 1.77 1.39]
   [0.62 1.26 0.87]
   [1.30 0.80 1.53]
   [1.60 1.48 1.57]
   [1.18 1.58 1.25]
   [1.29 1.09 1.15]
   [1.08 0.87 1.15]
   [1.71 1.40 1.29]
   [1.50 1.23 1.28]
   [1.57 1.14 1.15]
   [1.10 0.53 1.05]
   [1.19 1.50 1.13]
   [0.83 1.65 1.22]]
# ---
# name: test_martini[pent/prot_ion.tpr].3
  [5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5
   5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5]
# ---
# name: test_martini[pent/prot_ion.tpr].30
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].31
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].32
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].33
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].34
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].35
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].36
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].37
  [[ 46133  46142]
   [251501 251502]
   [131500 131501]
   [ 10045  10046]
   [  4257   4266]
   [ 66951  66952]
   [236003 236004]
   [191325 191326]
   [163504 163505]
   [  6622   6631]
   [145026 145035]
   [255493 255494]
   [ 93466  93467]
   [205589 205590]
   [278793 278794]
   [279785 279786]
   [ 41654  41655]
   [ 88095  88096]
   [135589 135590]
   [ 35257  35258]
   [216801 216802]
   [195653 195662]
   [ 40526  40518]
   [179769 179770]
   [201330 201331]
   [119824 119825]
   [230304 230313]
   [ 41203  41204]
   [ 92475  92476]
   [148092 148101]
   [ 45157  45158]
   [ 19336  19337]
   [ 96367  96368]
   [177923 177924]
   [253250 253242]
   [ 88869  88870]
   [285649 285658]
   [267907 267916]
   [  1236   1237]
   [178968 178969]
   [139823 139832]
   [222033 222034]
   [147711 147712]
   [174777 174778]
   [ 71454  71463]
   [ 36912  36913]
   [263127 263136]
   [265118 265119]
   [ 94534  94535]
   [ 73973  73982]
   [138067 138068]
   [156054 156055]
   [ 91491  91492]
   [198294 198295]
   [250148 250149]
   [130681 130690]
   [ 59116  59117]
   [105816 105817]
   [261844 261845]
   [  3919   3928]
   [ 95633  95642]
   [110584 110593]
   [ 18158  18167]
   [199018 199027]
   [149598 149599]
   [192868 192869]
   [195775 195776]
   [267331 267332]
   [215633 215642]
   [157451 157460]
   [ 82742  82751]
   [255405 255406]
   [ 27870  27871]
   [ 92131  92140]
   [214902 214903]
   [211091 211100]
   [ 43511  43512]
   [250066 250075]
   [114397 114398]
   [ 36251  36243]
   [238791 238800]
   [249006 249015]
   [198516 198517]
   [ 36016  36025]
   [276299 276308]
   [218606 218607]
   [236711 236712]
   [146806 146807]
   [200406 200407]
   [ 32973  32974]
   [ 87215  87216]
   [135902 135903]
   [231170 231179]
   [254258 254250]
   [110189 110198]
   [  3579   3588]
   [  6460   6469]
   [278413 278414]
   [ 79798  79807]
   [120506 120507]]
# ---
# name: test_martini[pent/prot_ion.tpr].38
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_martini[pent/prot_ion.tpr].39
  [False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False False False False False False False False False
   False False False False]
# ---
# name: test_martini[pent/prot_ion.tpr].4
  [ 784 4717 2544  359    5 1416 4573 3629 3106  214 2653 4754 1927 4026
   5235 5244  917 1877 2582  857 4130 3264  906 3522 3987 2436 4330  912
   1918 2832  949  445 1954 3505 4733 1884 5005 4899  277 3515 2382 4179
   2960 3476 1164  873 4865 5108 1937 1137 2605 3037 1909 3694 4704 2167
   1344 2041 5078  123 1836 1646  167 3238 2977 3643 3670 5129 3785 2813
   1234 4753  524 1803 4113 3869  934 4292 2386  866 4339 4349 3696  744
   5025 4147 4580 2951 3978  836 1869 2585 4390 4742 1675  181  213 5231
   1202 2443]
# ---
# name: test_martini[pent/prot_ion.tpr].5
  [ 7 15 11 12 14 10 13  6  0  8 12 11  8  5  5 11 13 16 16  5 13 14  9  6
   19  2  4 14 12 12 18  9  8  7  6 11  3 13 18 10 15  2  9  5 18 12  9 15
   12  8 12 19  8 11 10  6 13 14 14 10  0 12  2  2  8  5 14 11 16  8  3 10
    4  3 11  6 11 11  6  7 11 13 17 11  9 10  7 12  5  7 16  5  1 17 12  1
    6 18  2  7]
# ---
# name: test_martini[pent/prot_ion.tpr].6
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_martini[pent/prot_ion.tpr].7
  [ 7  5  7  7 10 10  8 10  4  9 10 10 10  9  7  7 10  6  8  7  7  8  7  7
   10  9  9  5  7  7  7  5  9 10 10  8 10  9 10  9 10  8 10  9  7  7  6 10
   10  7  9 10  7 10  5 10 10  9  9  7  9  7 10  8  7  9 10  7  9  9 10 10
   10  7 10  7 10 10 10 10  7  7 10 10  7 10 10  7 10 10  7  7  5  7  9  7
    8  7  5 10]
# ---
# name: test_martini[pent/prot_ion.tpr].8
  [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
   -1 -1 -1 -1]
# ---
# name: test_martini[pent/prot_ion.tpr].9
  [[1.64 0.72 1.51]
   [1.17 0.80 1.26]
   [0.91 1.63 1.33]
   [1.54 0.97 1.77]
   [1.59 1.26 0.98]
   [1.31 1.79 1.52]
   [0.90 0.53 1.31]
   [0.80 1.09 0.93]
   [1.16 1.84 1.05]
   [1.57 1.13 1.16]
   [1.14 1.62 0.77]
   [1.12 0.99 1.25]
   [1.34 1.50 1.72]
   [0.57 1.35 0.97]
   [1.18 0.54 1.11]
   [1.02 0.57 0.99]
   [1.55 0.61 1.64]
   [1.50 1.53 1.59]
   [1.11 1.54 1.23]
   [1.47 0.64 1.64]
   [0.58 1.20 0.82]
   [1.00 1.04 0.96]
   [1.48 0.68 1.65]
   [0.47 1.12 1.12]
   [0.66 1.35 0.89]
   [0.78 1.69 1.16]
   [1.20 0.89 1.06]
   [1.49 0.54 1.67]
   [1.56 1.62 1.70]
   [1.27 1.81 0.95]
   [1.62 0.72 1.45]
   [1.51 0.96 1.45]
   [1.48 1.51 1.80]
   [0.64 1.08 1.19]
   [0.98 0.90 1.28]
   [1.44 1.43 1.77]
   [1.09 0.64 1.11]
   [0.99 0.70 0.80]
   [1.54 1.04 1.54]
   [0.46 1.12 0.99]
   [0.84 1.49 1.21]
   [0.66 1.06 0.73]
   [1.15 1.78 1.39]
   [0.42 1.02 1.06]
   [1.47 1.52 1.09]
   [1.39 0.71 1.70]
   [1.14 0.76 0.96]
   [0.78 0.69 1.39]
   [1.62 1.56 1.74]
   [1.15 1.46 1.22]
   [1.00 1.43 1.27]
   [0.95 1.97 1.24]
   [1.52 1.47 1.59]
   [0.93 1.16 1.16]
   [0.97 0.90 1.12]
   [1.11 1.57 0.80]
   [1.44 1.61 1.50]
   [1.63 1.45 1.33]
   [0.81 0.80 1.17]
   [1.34 1.26 1.24]
   [1.53 1.59 1.60]
   [1.64 1.49 1.13]
   [1.62 1.19 1.26]
   [1.08 1.20 0.89]
   [0.95 1.92 1.33]
   [0.84 1.31 1.08]
   [0.85 1.22 1.23]
   [0.71 0.69 1.21]
   [0.64 1.36 0.58]
   [1.32 1.74 0.94]
   [1.44 1.57 1.19]
   [1.13 0.96 1.25]
   [1.14 0.97 1.49]
   [1.68 1.35 1.14]
   [0.59 1.44 0.91]
   [0.86 1.25 0.57]
   [1.38 0.65 1.43]
   [1.26 0.84 0.93]
   [0.86 1.61 1.17]
   [1.28 0.82 1.67]
   [1.20 0.75 1.00]
   [1.27 0.99 1.09]
   [0.90 1.21 1.18]
   [1.58 0.88 1.11]
   [0.95 0.48 1.04]
   [0.63 1.23 0.85]
   [0.85 0.55 1.33]
   [1.04 1.77 1.39]
   [0.62 1.26 0.87]
   [1.30 0.80 1.53]
   [1.60 1.48 1.57]
   [1.18 1.58 1.25]
   [1.29 1.09 1.15]
   [1.08 0.87 1.15]
   [1.71 1.40 1.29]
   [1.50 1.23 1.28]
   [1.57 1.14 1.15]
   [1.10 0.53 1.05]
   [1.19 1.50 1.13]
   [0.83 1.65 1.22]]
# ---
